<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/top_app_bar_cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:title="@string/cart_title" />

    <TextView
        android:id="@+id/itemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cart"
        app:layout_constraintTop_toBottomOf="@id/cart"
        android:padding="10dp"
        android:text="@string/cart_contains_items">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/itemCount"
        app:layout_constraintTop_toBottomOf="@id/itemCount" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlaceOpder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/orderBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/orderTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cart_order_total"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/orderTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cart_order_total_amount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/orderSubtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cart_order_subtotal"
                    app:layout_constraintStart_toStartOf="@id/orderTotal"
                    app:layout_constraintTop_toBottomOf="@id/orderTotal"/>

                <TextView
                    android:id="@+id/orderSubtotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cart_order_subtotal_amount"
                    app:layout_constraintEnd_toEndOf="@id/orderTotalAmount"
                    app:layout_constraintTop_toBottomOf="@id/orderTotalAmount"/>

                <TextView
                    android:id="@+id/orderShipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cart_order_shipping"
                    app:layout_constraintStart_toStartOf="@id/orderSubtotal"
                    app:layout_constraintTop_toBottomOf="@id/orderSubtotal"/>

                <TextView
                    android:id="@+id/orderShippingAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cart_order_shipping_amount"
                    app:layout_constraintEnd_toEndOf="@id/orderSubtotalAmount"
                    app:layout_constraintTop_toBottomOf="@id/orderSubtotalAmount"/>

                <TextView
                    android:id="@+id/orderTax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cart_order_tax"
                    app:layout_constraintStart_toStartOf="@id/orderShipping"
                    app:layout_constraintTop_toBottomOf="@id/orderShipping"/>

                <TextView
                    android:id="@+id/orderTaxAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/cart_order_tax_amount"
                    app:layout_constraintEnd_toEndOf="@id/orderShippingAmount"
                    app:layout_constraintTop_toBottomOf="@id/orderShippingAmount"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/buttonPlaceOpder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>