<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:paddingStart="10dp"
    android:paddingTop="5dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp"
    >

    <ImageView
        android:id="@+id/cartItemImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/cart_item_content_description"
        android:src="@drawable/image_24px"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/cartItemCategoryDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartItemTitle"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="List item 1"
        app:layout_constraintStart_toEndOf="@id/cartItemImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartItemPrice"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="$amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartItemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/cart_iten_category"
        app:layout_constraintStart_toEndOf="@id/cartItemImageView"
        app:layout_constraintTop_toBottomOf="@id/cartItemTitle" />

    <TextView
        android:id="@+id/cartItemCategoryDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/cart_iten_category_string"
        app:layout_constraintStart_toEndOf="@id/cartItemImageView"
        app:layout_constraintTop_toBottomOf="@id/cartItemCategory" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartItemCategoryDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>